--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "clientId": "977326756136644609",
-	"guildId": "972551043621736508",
-    "token": "OTc3MzI2NzU2MTM2NjQ0NjA5.GKxKmv.CJ-QnahhfeYjlXW0VrZugmKgU-fbZazRwp6oI4"
+	"clientid": "your-client-id"
+	"guildid": "your-guild-id"
+	"token": "your token"
 }
